2014-07-10  Tom G. Christensen  <tgc@jupiterrise.com>

	* doc/install.texi: Remove links to defunct package providers for
	Solaris.

2014-07-09  Tom de Vries  <tom@codesourcery.com>

       * final.c (get_call_fndecl): Declare.
       (self_recursive_call_p): New function.
       (collect_fn_hard_reg_usage): Handle self-recursive function calls.

2014-07-08  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-devirt.c (record_node): Walk through aliases.

2014-07-08  Jan Hubicka  <hubicka@ucw.cz>

	* lto-streamer-out.c (hash_scc): Avoid quadratic hashing loop.

2014-07-08  Jan Hubicka  <hubicka@ucw.cz>

	Revert:
	* stor-layout.c (finish_builtin_struct): Copy fields into the variants.

2014-07-08  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-visibility.c (function_and_variable_visibility): Remove
	temporary hack disabling local aliases on AIX.

2014-07-08  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-cp.c (devirtualization_time_bonus): Walk through aliases.
	* ipa-inline-analysis.c (estimate_edge_devirt_benefit): Likewise.

2014-07-08  Jan Hubicka  <hubicka@ucw.cz>

	* rs6000/rs6000-protos.h (rs6000_xcoff_declare_object_name): Declare.
	* rs6000/rs6000.c: Inline output of .set instruction.
	(declare_alias_data): New struct.
	(rs6000_declare_alias): New function.
	(rs6000_xcoff_declare_function_name): Use it.
	(rs6000_xcoff_declare_object_name): New function.
	* config/rs6000/xcoff.h: Define ASM_DECLARE_OBJECT_NAME.
	(ASM_OUTPUT_DEF): Turn to empty definition.

2014-07-08  Trevor Saunders  <tsaunders@mozilla.com>

	PR bootstrap/61679
	 * hash-table.h: use hash_table::value_type instead of
       	Descriptor::value_type in the return types of several methods.

2014-07-08  Trevor Saunders  <tsaunders@mozilla.com>

	* tree-pass.h (pass_data): Remove has_execute member.
	* passes.c (execute_one_pass): Don't check pass->has_execute.
	* asan.c, auto-inc-dec.c, bb-reorder.c, bt-load.c, cfgcleanup.c,
	cfgexpand.c, cfgrtl.c, cgraphbuild.c, combine-stack-adj.c, combine.c,