@@ -720,7 +720,7 @@ lower_builtin_setjmp (gimple_stmt_iterator *gsi)
      these builtins are modelled as non-local label jumps to the label
      that is passed to these two builtins, so pretend we have a non-local
      label during GIMPLE passes too.  See PR60003.  */ 
-  cfun->has_nonlocal_label = true;
+  cfun->has_nonlocal_label = 1;
 
   /* NEXT_LABEL is the label __builtin_longjmp will jump to.  Its address is
      passed to both __builtin_setjmp_setup and __builtin_setjmp_receiver.  */
