@@ -1,3 +1,7 @@
+2014-07-10  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/opt39.adb: New test.
+
 2014-07-10  Yuri Rumyantsev  <ysrumyan@gmail.com>
 
 	PR tree-optimization/61742
